[tool.poetry]
name = "chasis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vertebral = {path = "/srv/Projects/vertebral"}

[tool.poetry.scripts]
chasis = "core.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




